2005-09-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (FloatConverter._filter_locale): Rewrite, easier 
	to read and understand now. Can't remember all bugs it fixes.
	(IntConverter.from_string): Remove the thousand separators.

2005-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (format_price): Implement a function to format
	a number according to the current currency.

	* tests/test_datatypes.py (DataTypesTest.testFormatPrice): 
	some basic tests.

	* kiwi/ui/widgets/list.py:
	Add radio property to Column and set the radio property of
	the CellRendererToggle if it's set to True. Add a new callback
	for handling CellRendererToogle::toggled which updates the value
	of the model.

2005-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List._setup_columns): 
	Add check for sortable, add a searchable check.
	(Column): Add a searchable property.
	(List._setup_column): Set up a search equal func
	(List._search_equal_func): Define here, checks if 
	the string starts with the value, seems to be the expected behavior.

2005-09-01  Henrique Romano  <henrique@async.com.br>

	* kiwi/ui/widgets/list.py (List._setup_columns): 
	Just verifying if more than one column has the sorted attribute, if 
	so raise ValueError.

2005-06-14  Henrique Romano  <henrique@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py: Update to work with gazpacho trunk. 
	Add better data-type filters for various widgets.
	
2005-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column, List): Add support for cell editing.

2005-08-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column): subclass GObject implicitly.

	* kiwi/utils.py (PropertyObject): update to use ClassInittableObject
	refactor a little bit and add extra checks so we don't accidentally
	try to register a GObject type for it.
	Move out so it's not a subclass of GObject, but require it to