@@ -1,3 +1,7 @@
+2005-09-13  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/utils.py: AMD64 fix ported from gazpachos copy.
+
 2005-09-06  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/datatypes.py (FloatConverter._filter_locale): Rewrite, easier 
